--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser": "^15.2.3",
     "@angular/platform-browser-dynamic": "^15.2.3",
     "@angular/router": "^15.2.3",
+    "@kolkov/angular-editor": "^3.0.0-beta.0",
     "bootstrap": "4.6",
     "ngx-toastr": "^16.1.0",
     "rxjs": "~7.8.0",
