--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "@kolkov/angular-editor": "^3.0.0-beta.0",
     "bootstrap": "4.6",
     "ngx-toastr": "^16.1.0",
+    "protobufjs": "^7.2.5",
     "rxjs": "~7.8.0",
+    "semver": "^7.5.4",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
   },
